--- a/arch/arm64/configs/camellia_gl_defconfig
+++ b/arch/arm64/configs/camellia_gl_defconfig
@@ -1,8 +1,11 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
-# CONFIG_LOCALVERSION_AUTO is not set
+#BSP.System - 2020.11.11 - add compile commit id
+CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION_AUTO=y
 # CONFIG_FHANDLE is not set
 CONFIG_IKHEADERS=m
-CONFIG_LOG_BUF_SHIFT=19
+# BSP.System - 2020.10.29 - resize dmesg size
+CONFIG_LOG_BUF_SHIFT=21
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_GROUPS_COUNT=32
 CONFIG_UCLAMP_MAP_OPP=y
@@ -23,6 +26,8 @@ CONFIG_SYSCTL_SYSCALL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LTO_CLANG=y
 CONFIG_CFI_CLANG=y
+# BSP.Charge - 2020.11.14 - enable 18W charging
+CONFIG_MTK_SOFT_HVDCP_2=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
@@ -38,7 +43,7 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6833"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/camellia"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_DEBUG=y
@@ -67,7 +72,7 @@ CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6853"
-CONFIG_ARCH_MTK_PROJECT="k6833v1_64"
+CONFIG_ARCH_MTK_PROJECT="camellia"
 CONFIG_MTK_AB_OTA_UPDATER=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
@@ -86,7 +91,7 @@ CONFIG_MTK_STATIC_POWER=y
 CONFIG_MTK_UNIFY_POWER=y
 CONFIG_MTK_SLBC=y
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx586_mipi_raw imx576_mipi_raw s5k3m5sx_mipi_raw imx481_mipi_raw imx519_mipi_raw imx398_mipi_raw imx350_mipi_raw s5k2l7_mipi_raw imx386_mipi_raw imx386_mipi_mono s5k2t7sp_mipi_raw imx499_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov48b_qtech_main_mipi_raw ov48b_aac_main_mipi_raw ov8856_ofilm_front_mipi_raw ov8856_aac_front_mipi_raw gc02m1b_qtech_depth_mipi_mono gc02m1b_aac_depth_mipi_mono hi259h_qtech_macro_mipi_raw hi259h_aac_macro_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_DPE_SUPPORT=y
@@ -97,9 +102,16 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_SMI_EXT=y
-CONFIG_CUSTOM_KERNEL_LCM="nt35695B_fhd_dsi_cmd_auo_rt5081 td4330_fhdp_dsi_cmd_auo_rt5081 ft8756_fhdp_dsi_vdo_auo_rt4801"
+# BSP.lcm - 2020.11.19
+CONFIG_CUSTOM_KERNEL_LCM="nt36672A_fhdp_dsi_vdo_tianma_j19 nt36672c_fhdp_dsi_vdo_tianma_90hz_k19 nt36672d_fhdp_dsi_vdo_tianma_90hz_k19 nt36672c_fhdp_dsi_vdo_truly_90hz_k19"
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_LCM_HEIGHT="2300"
+CONFIG_LCM_HEIGHT="2400"
+CONFIG_LCM_WIDTH="1080"
+#BSP.LCM - 2020.11.14 - modify to set brightness
+CONFIG_KTD3136_SUPPORT=y
+CONFIG_LM3697_SUPPORT=y
+CONFIG_MFD_TI_LMU=y
+CONFIG_LEDS_MTK_DISP=y
 CONFIG_MTK_AAL_SUPPORT=y
 CONFIG_MTK_CAM_SECURITY_SUPPORT=y
 CONFIG_MTK_CAM_GENIEZONE_SUPPORT=y
@@ -110,7 +122,7 @@ CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
-CONFIG_CUSTOM_KERNEL_BAROMETER=y
+CONFIG_CUSTOM_KERNEL_BAROMETER=n
 CONFIG_CUSTOM_KERNEL_GRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
@@ -151,7 +163,8 @@ CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
 CONFIG_MTK_TINYSYS_SCP_SUPPORT=y
 CONFIG_MTK_LEDS=y
-CONFIG_LEDS_MTK_PWM=y
+#BSP.LCM - 2020.11.14 - modify to set brightness
+CONFIG_LEDS_MTK_PWM=n
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
@@ -173,7 +186,8 @@ CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
 CONFIG_TCPC_MT6360=y
 CONFIG_TCPC_CLASS=y
-CONFIG_USB_POWER_DELIVERY=y
+# BSP.Charge - 2020.10.27 - Disable PD in K19
+# CONFIG_USB_POWER_DELIVERY is not set
 CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
@@ -212,6 +226,8 @@ CONFIG_UFSTW=y
 CONFIG_UFSTW_IGNORE_GUARANTEE_BIT=y
 CONFIG_SCSI_SKHPB=y
 CONFIG_SCSI_UFS_CRYPTO=y
+#BSP.Memory - 2020.12.5 - add ufs feature
+CONFIG_MI_MEMORY_SYSFS=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_DEFAULT_KEY=y
@@ -251,6 +267,8 @@ CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
+# BSP.System - 2020.11.16 - config thermal farmework
+CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
 CONFIG_WATCHDOG=y
 CONFIG_MTK_WATCHDOG_COMMON=y
@@ -271,9 +289,14 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEDIATEK_JPEG=y
 CONFIG_VIDEO_MEDIATEK_VCODEC=y
 CONFIG_DRM=y
+# BSP.lcm - 2020.11.19 - start
+CONFIG_DRM_PANEL_NT36672D_TIANMA_VDO=y
+CONFIG_DRM_PANEL_NT36672C_TIANMA_VDO=y
+CONFIG_DRM_PANEL_NT36672C_TRULY_VDO=y
 CONFIG_DRM_PANEL_NT35695B_AUO_VDO=y
-CONFIG_DRM_PANEL_TRULY_TD4330_VDO=y
-CONFIG_DRM_PANEL_TRULY_FT8756_VDO=y
+# BSP.lcm - 2020.11.19 - end
+#CONFIG_DRM_PANEL_TRULY_TD4330_VDO=y
+#CONFIG_DRM_PANEL_TRULY_FT8756_VDO=y
 CONFIG_DRM_MEDIATEK=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
@@ -348,6 +371,11 @@ CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
 CONFIG_MTK_EMMC_SUPPORT_OTP=y
 CONFIG_MTK_EMMC_HW_CQ=y
+# BSP.System - 2020.10.27 - add cpu id
+CONFIG_SERIAL_NUM=y
+# BSP.Security - 2020.12.19 -add debugpolicy feature
+CONFIG_DEBUG_POLICY=y
+CONFIG_CHIP_ID=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_FLASH=y
@@ -373,6 +401,8 @@ CONFIG_MTK_MBOX=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
+# BSP.System - 2020.11.2 - add simtray status
+CONFIG_SIMTRAY_STATUS=y
 CONFIG_MEDIATEK_MT6577_AUXADC=y
 CONFIG_MT635X_AUXADC=y
 CONFIG_PWM=y
@@ -401,7 +431,9 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_FRAME_WARN=3600
-CONFIG_PANIC_ON_OOPS=y
+# BSP.System - 2020.10.28 - add hw_info
+CONFIG_HQ_SYSFS_SUPPORT=y
+# CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
@@ -413,5 +445,57 @@ CONFIG_MTK_SCHED_TRACERS=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_TASK_DELAY_ACCT=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_CRC8=y
+#BSP Audio vow
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_VOW_DUAL_MIC_SUPPORT=y
+CONFIG_MTK_VOW_MAX_PDK_NUMBER=0
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
+CONFIG_MTK_VOW_GVA_SUPPORT=y
+
+# BSP.IR LED - 2020.10.27 - add ir configuration begin
+#CONFIG_CAMELLIA_IR_SPI=y
+#CONFIG_LIRC=y
+#CONFIG_RC_CORE=y
+#CONFIG_RC_DECODERS=y
+#CONFIG_MEDIA_RC_SUPPORT=y
+#CONFIG_HAS_IOMEM=y
+#CONFIG_RC_DEVICES=y
+CONFIG_MTK_IRTX_PWM_SUPPORT=y
+# BSP.IR LED - 2020.10.27 - add ir configuration end
+
+#SVP
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+
+CONFIG_TOUCHSCREEN_MTK=y
+CONFIG_TOUCHSCREEN_NT36672C=y
+#BSP.Audio - 2020.11.2 - add AW87559
+CONFIG_SND_SOC_AW87559=y
+# BSP.fingerprint - 2020.11.3 - add tee start
+CONFIG_MICROTRUST_TEE_SUPPORT=y
+CONFIG_TEE=y
+# BSP.fingerprint - 2020.11.3 - add tee end
+# BSP.audio - 2020.11.09 - modify to add headphone node start
+CONFIG_SWITCH=y
+# BSP.audio - 2020.11.09 - modify to add headphone node end
+#BSP fingerprint- 2020.11.4 - fingerprint bringup start
+CONFIG_GOODIX_FINGERPRINT=y
+CONFIG_FPC_FINGERPRINT=y
+CONFIG_MTK_FINGERPRINT_SUPPORT=y
+#BSP fingerprint- 2020.11.4 - fingerprint bringup end
+# Con.NFC - 2020.11.9 - add start
+CONFIG_NFC_CHIP_SUPPORT=y
+CONFIG_MTK_NFC_CLKBUF_ENABLE=y
+# Con.NFC - 2020.11.9 - add end
+#BSP Audio - 2020.11.16 - add second PA
+CONFIG_SND_SOC_FS16XX=y
+#BSP.TP - 2020.12.28 - Add for palm senser
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
+CONFIG_MTK_SECURITY_SW_SUPPORT=y
+CONFIG_BLK_WBT=y
+CONFIG_BLK_WBT_SQ=y
+CONFIG_BLK_WBT_MQ=n
