--- a/arch/arm64/configs/k6853v1_64_swrgo_defconfig
+++ b/arch/arm64/configs/k6853v1_64_swrgo_defconfig
@@ -21,14 +21,12 @@ CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
-CONFIG_CFI_CLANG=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_CFQ_GROUP_IOSCHED=y
-CONFIG_MACH_MT6833=y
+CONFIG_MACH_MT6853=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
@@ -38,7 +36,7 @@ CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6833"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6853"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_DEBUG=y
@@ -67,42 +65,38 @@ CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6853"
-CONFIG_ARCH_MTK_PROJECT="k6833v1_64"
+CONFIG_ARCH_MTK_PROJECT="k6853v1_64_swrgo"
 CONFIG_MTK_AB_OTA_UPDATER=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 CONFIG_MTK_PMIC_CHIP_MT6359P=y
 CONFIG_MTK_EXTERNAL_CHARGER_TYPE_DETECT=y
-CONFIG_MFD_MT6360_PMU=y
-CONFIG_MT6360_PMU_CHARGER=y
-CONFIG_MT6360_PMU_FLED=y
-CONFIG_MT6360_PMIC=y
-CONFIG_MT6360_LDO=y
+CONFIG_MT6362_DBG=y
 CONFIG_MTK_CPU_FREQ=y
 CONFIG_MTK_PTPOD=y
 CONFIG_MTK_PTPOD_GPU=y
 CONFIG_MTK_STATIC_POWER=y
 CONFIG_MTK_UNIFY_POWER=y
 CONFIG_MTK_SLBC=y
+CONFIG_MTK_CM_MGR=y
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx586_mipi_raw imx576_mipi_raw s5k3m5sx_mipi_raw imx481_mipi_raw imx519_mipi_raw imx398_mipi_raw imx350_mipi_raw s5k2l7_mipi_raw imx386_mipi_raw imx386_mipi_mono s5k2t7sp_mipi_raw imx499_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_DPE_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_FD_SUPPORT=y
+CONFIG_MTK_CAMERA_ISP_WPE_SUPPORT=y
 CONFIG_MTK_CAMERA_ISP_MFB_SUPPORT=y
 CONFIG_MTK_CAM_CAL=y
 CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_SMI_EXT=y
-CONFIG_CUSTOM_KERNEL_LCM="nt35695B_fhd_dsi_cmd_auo_rt5081 td4330_fhdp_dsi_cmd_auo_rt5081 ft8756_fhdp_dsi_vdo_auo_rt4801"
+CONFIG_CUSTOM_KERNEL_LCM="td4330_fhdp_dsi_vdo_auo_rt5081"
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_LCM_HEIGHT="2300"
 CONFIG_MTK_AAL_SUPPORT=y
-CONFIG_MTK_CAM_SECURITY_SUPPORT=y
-CONFIG_MTK_CAM_GENIEZONE_SUPPORT=y
+CONFIG_MTK_PQ_COLOR_MODE="DISP"
 CONFIG_MTK_CCU=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSOR_ARCHITECTURE="2.0"
@@ -122,7 +116,7 @@ CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
 CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
 CONFIG_CUSTOM_KERNEL_SENSORHUB=y
 CONFIG_MTK_COMBO=y
-CONFIG_MTK_COMBO_CHIP_CONSYS_6833=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6853=y
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
@@ -145,10 +139,11 @@ CONFIG_ACCDET_SUPPORT_EINT0=y
 CONFIG_MTK_PSEUDO_M4U=y
 CONFIG_MTK_LENS=y
 CONFIG_MTK_FLASHLIGHT=y
-CONFIG_MTK_FLASHLIGHT_MT6360=y
+CONFIG_MTK_V4L2_FLASHLIGHT=y
 CONFIG_MTK_FLASHLIGHT_PT=y
 CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
+CONFIG_RT_FLASHLIGHT=y
 CONFIG_MTK_TINYSYS_SCP_SUPPORT=y
 CONFIG_MTK_LEDS=y
 CONFIG_LEDS_MTK_PWM=y
@@ -161,19 +156,14 @@ CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SCHED_RQAVG_KS=y
 CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
-CONFIG_USB_MTK_HDRC=y
-CONFIG_MTK_MUSB_QMU_SUPPORT=y
-CONFIG_MTK_MUSB_QMU_PURE_ZLP_SUPPORT=y
-CONFIG_MTK_MUSB_DRV_36BIT=y
-CONFIG_USB_MTK_OTG=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_AEE_FEATURE=y
-# CONFIG_USB_MU3D_DEFAULT_U2_MODE is not set
+CONFIG_MTK_SIB_USB_SWITCH=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
-CONFIG_TCPC_MT6360=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
+CONFIG_TCPC_MT6362=y
 CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
@@ -182,6 +172,7 @@ CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
 CONFIG_MTK_GBE=y
 CONFIG_MTK_PERF_TRACKER=y
+CONFIG_MTK_SKB_OWNER=y
 CONFIG_MTK_TASK_TURBO=y
 CONFIG_MTPROF=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
@@ -198,7 +189,6 @@ CONFIG_MTK_SYNC=y
 CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
-CONFIG_MTK_CACHE_PARTITION_CTRL=y
 CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -224,13 +214,14 @@ CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
+# CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_MTK=y
 CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
 CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
 CONFIG_KPD_PWRKEY_USE_PMIC=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
+CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S GT1151"
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_VT is not set
@@ -249,6 +240,7 @@ CONFIG_MTK_PMIF=y
 CONFIG_MTK_GAUGE_VERSION=30
 CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
+CONFIG_CHARGER_MT6362=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
@@ -256,11 +248,12 @@ CONFIG_WATCHDOG=y
 CONFIG_MTK_WATCHDOG_COMMON=y
 CONFIG_MTK_WATCHDOG_COMMON_V2=y
 CONFIG_MFD_MT6358=y
+CONFIG_MFD_MT6362=y
 CONFIG_MT6358_MISC=y
 CONFIG_MTK_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR=y
-CONFIG_REGULATOR_MT6315=y
 CONFIG_REGULATOR_MT6359P=y
+CONFIG_REGULATOR_MT6362=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
@@ -269,11 +262,12 @@ CONFIG_V4L2_FLASH_LED_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEDIATEK_JPEG=y
+CONFIG_VIDEO_MEDIATEK_VCU_WO_FUSE=y
 CONFIG_VIDEO_MEDIATEK_VCODEC=y
 CONFIG_DRM=y
 CONFIG_DRM_PANEL_NT35695B_AUO_VDO=y
+CONFIG_DRM_PANEL_NT36672A_RT4801_VDO=y
 CONFIG_DRM_PANEL_TRULY_TD4330_VDO=y
-CONFIG_DRM_PANEL_TRULY_FT8756_VDO=y
 CONFIG_DRM_MEDIATEK=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
@@ -288,11 +282,13 @@ CONFIG_SND_DEBUG_VERBOSE=y
 CONFIG_SND_PCM_XRUN_DEBUG=y
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
+# CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
+CONFIG_MTK_UAC_POWER_SAVING=y
 CONFIG_SND_SOC=y
-CONFIG_SND_SOC_MT6833_MT6359=y
+CONFIG_SND_SOC_MT6853_MT6359=y
 CONFIG_SND_SOC_MTK_BTCVSD=y
-CONFIG_SND_SOC_RT5509=y
+CONFIG_SND_SOC_MT6660=y
 CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -319,6 +315,8 @@ CONFIG_HID_SMARTJOYPLUS=y
 CONFIG_HID_TOPSEED=y
 CONFIG_HID_THRUSTMASTER=y
 CONFIG_HID_ZEROPLUS=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_MTK_SUSPEND=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_DATAFAB=y
 CONFIG_USB_STORAGE_FREECOM=y
@@ -331,6 +329,8 @@ CONFIG_USB_STORAGE_ALAUDA=y
 CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
+CONFIG_USB_MTU3=y
+CONFIG_USB_MTU3_PLAT_PHONE=y
 CONFIG_USB_TRANCEVIBRATOR=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_DUAL_ROLE_USB_INTF=y
@@ -342,15 +342,14 @@ CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_CRYPTO=y
 CONFIG_MMC_MTK_PRO=y
 CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
 CONFIG_MTK_EMMC_SUPPORT_OTP=y
-CONFIG_MTK_EMMC_HW_CQ=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_FLASH=y
+CONFIG_LEDS_MT6362=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_RTC_SYSTOHC is not set
@@ -362,21 +361,46 @@ CONFIG_ION=y
 CONFIG_MTK_ION=y
 CONFIG_NANOHUB=y
 CONFIG_NANOHUB_MTK_IPI=y
+CONFIG_COMMON_CLK_MT6853_APU0=y
+CONFIG_COMMON_CLK_MT6853_APU1=y
+CONFIG_COMMON_CLK_MT6853_APU_VCORE=y
+CONFIG_COMMON_CLK_MT6853_APU_CONN=y
+CONFIG_COMMON_CLK_MT6853_AUDIO=y
+CONFIG_COMMON_CLK_MT6853_CAMSYS_MAIN=y
+CONFIG_COMMON_CLK_MT6853_CAMSYS_RAWA=y
+CONFIG_COMMON_CLK_MT6853_CAMSYS_RAWB=y
+CONFIG_COMMON_CLK_MT6853_IMGSYS1=y
+CONFIG_COMMON_CLK_MT6853_IMGSYS2=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_C=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_E=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_N=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_S=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_W=y
+CONFIG_COMMON_CLK_MT6853_IMP_IIC_WRAP_WS=y
+CONFIG_COMMON_CLK_MT6853_IPESYS=y
+CONFIG_COMMON_CLK_MT6853_MDPSYS_CONFIG=y
+CONFIG_COMMON_CLK_MT6853_MFGSYS=y
+CONFIG_COMMON_CLK_MT6853_MMSYS_CONFIG=y
+CONFIG_COMMON_CLK_MT6853_SCP=y
+CONFIG_COMMON_CLK_MT6853_VDEC_GCON=y
+CONFIG_COMMON_CLK_MT6853_VENC_GCON=y
 CONFIG_MAILBOX=y
 CONFIG_MTK_CMDQ_MBOX=y
+CONFIG_MTK_RPMSG_MBOX=y
 CONFIG_MTK_IOMMU_V2=y
 CONFIG_MTK_IOMMU_PGTABLE_EXT=34
 CONFIG_RPMSG_MTK=y
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_MTK_IPI=y
 CONFIG_MTK_MBOX=y
+CONFIG_EXTCON_MTK_USB=y
 CONFIG_IIO=y
-CONFIG_IIO_BUFFER=y
-CONFIG_IIO_KFIFO_BUF=y
 CONFIG_MEDIATEK_MT6577_AUXADC=y
 CONFIG_MT635X_AUXADC=y
+CONFIG_MT6362_ADC=y
 CONFIG_PWM=y
 CONFIG_PWM_MTK_DISP=y
+CONFIG_PHY_MTK_USB=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_INCREMENTAL_FS=y
@@ -414,4 +438,3 @@ CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_HW is not set
-CONFIG_CRC8=y
