--- a/arch/arm64/boot/dts/mediatek/bat_setting/mt6833_battery_prop.dtsi
+++ b/arch/arm64/boot/dts/mediatek/bat_setting/mt6833_battery_prop.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2018 MediaTek Inc.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -12,6 +13,10 @@
  */
 bat_gm30: battery{
 	compatible = "mediatek,bat_gm30";
+	/* BSP.Charger - 2020.11.09 - add battery id adc channel - start */
+	io-channels = <&auxadc 4>;
+	io-channel-names = "batteryID-channel";
+	/* BSP.Charger - 2020.11.09 - add battery id adc channel - end */
 	DIFFERENCE_FULLOCV_ITH = <(200)>;
 /*	Charging termination current*/
 	SHUTDOWN_1_TIME = <(5)>;
@@ -26,7 +31,8 @@ bat_gm30: battery{
 /*	System shutdown current*/
 	FG_METER_RESISTANCE = <(100)>;
 /*	The resistance of PCB*/
-	CAR_TUNE_VALUE = <(100)>;
+/* BSP.Charger - 2020.12.29 - modify CAR_TUNE_VALUE */
+	CAR_TUNE_VALUE = <(101)>;
 /*	Tune value for current measurement*/
 	PMIC_MIN_VOL = <(33500)>;
 /*	vboot voltage for gauge 0%*/
@@ -44,15 +50,15 @@ bat_gm30: battery{
 /*	Battery temperature T3*/
 	TEMPERATURE_T4 = <(-10)>;
 /*	Battery temperature T4*/
-	g_FG_PSEUDO100_T0 = <(100)>;
+	g_FG_PSEUDO100_T0 = <(97)>;
 /*	Pseudo 100% percentage at T0*/
-	g_FG_PSEUDO100_T1 = <(100)>;
+	g_FG_PSEUDO100_T1 = <(97)>;
 /*	Pseudo 100% percentage at T1*/
-	g_FG_PSEUDO100_T2 = <(100)>;
+	g_FG_PSEUDO100_T2 = <(95)>;
 /*	Pseudo 100% percentage at T2*/
-	g_FG_PSEUDO100_T3 = <(100)>;
+	g_FG_PSEUDO100_T3 = <(92)>;
 /*	Pseudo 100% percentage at T3*/
-	g_FG_PSEUDO100_T4 = <(100)>;
+	g_FG_PSEUDO100_T4 = <(90)>;
 /*	Pseudo 100% percentage at T4*/
 	Q_MAX_SYS_VOLTAGE_BAT0 = <(3350)>;
 /*	Pseudo1 for hide percentage*/
@@ -72,6 +78,10 @@ bat_gm30: battery{
 /* Table numbers per battery*/
 	MULTI_TEMP_GAUGE0 = <(1)>;
 /* Multi gauge0 enable*/
-#include "mt6833_battery_table.dtsi"
+/* #include "mt6833_battery_table.dtsi" */
+/* BSP.Charge - 2020.12.16 -Add charging table start */
+#include "mtk_camellia_COSMX_68K_battery_table.dtsi"
+#include "mtk_camellia_NVT_330K_battery_table.dtsi"
+/* BSP.Charge - 2020.12.16 -Add charging table end */
 #include "mt6833_battery_prop_dim2_ext.dtsi"
 };
