--- a/arch/arm64/boot/dts/mediatek/cust_mt6833_camera.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6833_camera.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2019 MediaTek Inc.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -14,14 +15,14 @@
 &pio {
 	camera_pins_cam0_rst_0: cam0@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO58__FUNC_GPIO58>;
+			pinmux = <PINMUX_GPIO56__FUNC_GPIO56>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam0_rst_1: cam0@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO58__FUNC_GPIO58>;
+			pinmux = <PINMUX_GPIO56__FUNC_GPIO56>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -44,29 +45,29 @@
 
 	camera_pins_cam2_rst_0: cam2@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO56__FUNC_GPIO56>;
+			pinmux = <PINMUX_GPIO60__FUNC_GPIO60>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam2_rst_1: cam2@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO56__FUNC_GPIO56>;
+			pinmux = <PINMUX_GPIO60__FUNC_GPIO60>;
 			slew-rate = <1>;
 			output-high;
 		};
 	};
 
-	camera_pins_cam4_rst_0: cam4@0 {
+	camera_pins_cam3_rst_0: cam3@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO60__FUNC_GPIO60>;
+			pinmux = <PINMUX_GPIO58__FUNC_GPIO58>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
-	camera_pins_cam4_rst_1: cam4@1 {
+	camera_pins_cam3_rst_1: cam3@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO60__FUNC_GPIO60>;
+			pinmux = <PINMUX_GPIO58__FUNC_GPIO58>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -88,14 +89,14 @@
 	};
 	camera_pins_cam0_vcama_0: cam0@vcam2 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO94__FUNC_GPIO94>;
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam0_vcama_1: cam0@vcam3 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO94__FUNC_GPIO94>;
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -157,61 +158,61 @@
 			output-high;
 		};
 	};
-	camera_pins_cam4_vcamd_0: cam4@vcam0 {
+	camera_pins_cam3_vcamd_0: cam3@vcam0 {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO93__FUNC_GPIO93>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
-	camera_pins_cam4_vcamd_1: cam4@vcam1 {
+	camera_pins_cam3_vcamd_1: cam3@vcam1 {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO93__FUNC_GPIO93>;
 			slew-rate = <1>;
 			output-high;
 		};
 	};
-	camera_pins_cam4_vcama_0: cam4@vcam2 {
+	camera_pins_cam3_vcama_0: cam3@vcam2 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO80__FUNC_GPIO80>;
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
-	camera_pins_cam4_vcama_1: cam4@vcam3 {
+	camera_pins_cam3_vcama_1: cam3@vcam3 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO80__FUNC_GPIO80>;
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
 			slew-rate = <1>;
 			output-high;
 		};
 	};
 	camera_pins_cam0_mclk_off: camera_pins_cam0_mclk_off {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO51__FUNC_GPIO51>;
+			pinmux = <PINMUX_GPIO50__FUNC_GPIO50>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam0_mclk_2ma: camera_pins_cam0_mclk_2ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
 			drive-strength = <0>;
 		};
 	};
 	camera_pins_cam0_mclk_4ma: camera_pins_cam0_mclk_4ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam0_mclk_6ma: camera_pins_cam0_mclk_6ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
 			drive-strength = <2>;
 		};
 	};
 	camera_pins_cam0_mclk_8ma: camera_pins_cam0_mclk_8ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
 			drive-strength = <3>;
 		};
 	};
@@ -247,61 +248,61 @@
 	};
 	camera_pins_cam2_mclk_off: camera_pins_cam2_mclk_off {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO50__FUNC_GPIO50>;
+			pinmux = <PINMUX_GPIO52__FUNC_GPIO52>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_2ma: camera_pins_cam2_mclk_2ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
 			drive-strength = <0>;
 		};
 	};
 	camera_pins_cam2_mclk_4ma: camera_pins_cam2_mclk_4ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_6ma: camera_pins_cam2_mclk_6ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
 			drive-strength = <2>;
 		};
 	};
 	camera_pins_cam2_mclk_8ma: camera_pins_cam2_mclk_8ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO50__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
 			drive-strength = <3>;
 		};
 	};
-	camera_pins_cam4_mclk_off: camera_pins_cam4_mclk_off {
+	camera_pins_cam3_mclk_off: camera_pins_cam3_mclk_off {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO52__FUNC_GPIO52>;
+			pinmux = <PINMUX_GPIO51__FUNC_GPIO51>;
 			drive-strength = <1>;
 		};
 	};
-	camera_pins_cam4_mclk_2ma: camera_pins_cam4_mclk_2ma {
+	camera_pins_cam3_mclk_2ma:camera_pins_cam3_mclk_2ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
+			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
 			drive-strength = <0>;
 		};
 	};
-	camera_pins_cam4_mclk_4ma: camera_pins_cam4_mclk_4ma {
+	camera_pins_cam3_mclk_4ma:camera_pins_cam3_mclk_4ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
+			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
 			drive-strength = <1>;
 		};
 	};
-	camera_pins_cam4_mclk_6ma: camera_pins_cam4_mclk_6ma {
+	camera_pins_cam3_mclk_6ma:camera_pins_cam3_mclk_6ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
+			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
 			drive-strength = <2>;
 		};
 	};
-	camera_pins_cam4_mclk_8ma: camera_pins_cam4_mclk_8ma {
+	camera_pins_cam3_mclk_8ma:camera_pins_cam3_mclk_8ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO52__FUNC_CMMCLK3>;
+			pinmux = <PINMUX_GPIO51__FUNC_CMMCLK2>;
 			drive-strength = <3>;
 		};
 	};
@@ -341,15 +342,15 @@
 			"cam0_rst0", "cam0_rst1",
 			"cam1_rst0", "cam1_rst1",
 			"cam2_rst0", "cam2_rst1",
-			"cam4_rst0", "cam4_rst1",
+			"cam3_rst0", "cam3_rst1",
 			"cam0_ldo_vcamd_0", "cam0_ldo_vcamd_1",
 			"cam0_ldo_vcama_0", "cam0_ldo_vcama_1",
 			"cam1_ldo_vcamd_0", "cam1_ldo_vcamd_1",
 			"cam1_ldo_vcama_0", "cam1_ldo_vcama_1",
 			"cam2_ldo_vcamd_0", "cam2_ldo_vcamd_1",
 			"cam2_ldo_vcama_0", "cam2_ldo_vcama_1",
-			"cam4_ldo_vcamd_0", "cam4_ldo_vcamd_1",
-			"cam4_ldo_vcama_0", "cam4_ldo_vcama_1",
+			"cam3_ldo_vcamd_0", "cam3_ldo_vcamd_1",
+			"cam3_ldo_vcama_0", "cam3_ldo_vcama_1",
 			"cam0_mclk_off",
 			"cam0_mclk_2mA", "cam0_mclk_4mA",
 			"cam0_mclk_6mA", "cam0_mclk_8mA",
@@ -359,9 +360,9 @@
 			"cam2_mclk_off",
 			"cam2_mclk_2mA", "cam2_mclk_4mA",
 			"cam2_mclk_6mA", "cam2_mclk_8mA",
-			"cam4_mclk_off",
-			"cam4_mclk_2mA", "cam4_mclk_4mA",
-			"cam4_mclk_6mA", "cam4_mclk_8mA",
+			"cam3_mclk_off",
+			"cam3_mclk_2mA", "cam3_mclk_4mA",
+			"cam3_mclk_6mA", "cam3_mclk_8mA",
 			"cam_mipi_switch_en_1", "cam_mipi_switch_en_0",
 			"cam_mipi_switch_sel_1", "cam_mipi_switch_sel_0";
 	pinctrl-0 = <&camera_pins_default>;
@@ -371,8 +372,8 @@
 	pinctrl-4 = <&camera_pins_cam1_rst_1>;
 	pinctrl-5 = <&camera_pins_cam2_rst_0>;
 	pinctrl-6 = <&camera_pins_cam2_rst_1>;
-	pinctrl-7 = <&camera_pins_cam4_rst_0>;
-	pinctrl-8 = <&camera_pins_cam4_rst_1>;
+	pinctrl-7 = <&camera_pins_cam3_rst_0>;
+	pinctrl-8 = <&camera_pins_cam3_rst_1>;
 	pinctrl-9 = <&camera_pins_cam0_vcamd_0>;
 	pinctrl-10 = <&camera_pins_cam0_vcamd_1>;
 	pinctrl-11 = <&camera_pins_cam0_vcama_0>;
@@ -385,10 +386,10 @@
 	pinctrl-18 = <&camera_pins_cam2_vcamd_1>;
 	pinctrl-19 = <&camera_pins_cam2_vcama_0>;
 	pinctrl-20 = <&camera_pins_cam2_vcama_1>;
-	pinctrl-21 = <&camera_pins_cam4_vcamd_0>;
-	pinctrl-22 = <&camera_pins_cam4_vcamd_1>;
-	pinctrl-23 = <&camera_pins_cam4_vcama_0>;
-	pinctrl-24 = <&camera_pins_cam4_vcama_1>;
+	pinctrl-21 = <&camera_pins_cam3_vcamd_0>;
+	pinctrl-22 = <&camera_pins_cam3_vcamd_1>;
+	pinctrl-23 = <&camera_pins_cam3_vcama_0>;
+	pinctrl-24 = <&camera_pins_cam3_vcama_1>;
 	pinctrl-25 = <&camera_pins_cam0_mclk_off>;
 	pinctrl-26 = <&camera_pins_cam0_mclk_2ma>;
 	pinctrl-27 = <&camera_pins_cam0_mclk_4ma>;
@@ -404,11 +405,11 @@
 	pinctrl-37 = <&camera_pins_cam2_mclk_4ma>;
 	pinctrl-38 = <&camera_pins_cam2_mclk_6ma>;
 	pinctrl-39 = <&camera_pins_cam2_mclk_8ma>;
-	pinctrl-40 = <&camera_pins_cam4_mclk_off>;
-	pinctrl-41 = <&camera_pins_cam4_mclk_2ma>;
-	pinctrl-42 = <&camera_pins_cam4_mclk_4ma>;
-	pinctrl-43 = <&camera_pins_cam4_mclk_6ma>;
-	pinctrl-44 = <&camera_pins_cam4_mclk_8ma>;
+	pinctrl-40 = <&camera_pins_cam3_mclk_off>;
+	pinctrl-41 = <&camera_pins_cam3_mclk_2ma>;
+	pinctrl-42 = <&camera_pins_cam3_mclk_4ma>;
+	pinctrl-43 = <&camera_pins_cam3_mclk_6ma>;
+	pinctrl-44 = <&camera_pins_cam3_mclk_8ma>;
 	pinctrl-45 = <&camera_pins_cam_mipi_switch_en_1>;
 	pinctrl-46 = <&camera_pins_cam_mipi_switch_en_0>;
 	pinctrl-47 = <&camera_pins_cam_mipi_switch_sel_1>;
@@ -417,15 +418,21 @@
 	cam0_vcamio-supply = <&mt_pmic_vcamio_ldo_reg>;
 	cam1_vcamio-supply = <&mt_pmic_vcamio_ldo_reg>;
 	cam2_vcamio-supply = <&mt_pmic_vcamio_ldo_reg>;
-	cam4_vcamio-supply = <&mt_pmic_vcamio_ldo_reg>;
+	cam3_vcamio-supply = <&mt_pmic_vcamio_ldo_reg>;
 
 	status = "okay";
+
+       cam0_enable_sensor = "ov48b_qtech_main_mipi_raw ov48b_aac_main_mipi_raw";
+       cam1_enable_sensor = "ov8856_ofilm_front_mipi_raw ov8856_aac_front_mipi_raw";
+       cam2_enable_sensor = "gc02m1b_qtech_depth_mipi_mono gc02m1b_aac_depth_mipi_mono";
+       cam3_enable_sensor = "hi259h_qtech_macro_mipi_raw hi259h_aac_macro_mipi_raw";
+
 };
 /* CAMERA GPIO end */
 
 /* CAMERA EEPROM */
 &i2c2 {
-	mtk_camera_eeprom4:camera_eeprom4@51 {
+	mtk_camera_eeprom0:camera_eeprom0@51 {
 		compatible = "mediatek,camera_eeprom";
 		reg = <0x51>;
 		status = "okay";
@@ -437,17 +444,20 @@
 		reg = <0x51>;
 		status = "okay";
 	};
+};
+&i2c8 {
+	mtk_camera_eeprom3:camera_eeprom3@52 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x52>;
+		status = "okay";
+	};
+};
+&i2c9 {
 	mtk_camera_eeprom2:camera_eeprom2@50 {
 		compatible = "mediatek,camera_eeprom";
 		reg = <0x50>;
 		status = "okay";
 	};
 };
-&i2c8 {
-	mtk_camera_eeprom0:camera_eeprom0@50 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x50>;
-		status = "okay";
-	};
-};
 /* CAMERA EEPROM end */
+
