--- a/arch/arm64/boot/dts/mediatek/cust_mt6833_msdc.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6833_msdc.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2017 MediaTek Inc.
+ * Copyright (C) 2021 XiaoMi, Inc.
  * Author: Shi.Ma <shi.ma@mediatek.com>
  *
  * This program is free software; you can redistribute it and/or modify
@@ -75,8 +76,9 @@
 #endif
 
 	host_function = /bits/ 8 <MSDC_SD>;
-
-	cd_level = /bits/ 8 <MSDC_CD_LOW>;
+/*BSP.Memory - 2020.11.03 - sdcard bringup start*/
+	cd_level = /bits/ 8 <MSDC_CD_HIGH>;
+/*BSP.Memory - 2020.11.03 - sdcard bringup end*/
 #ifndef CONFIG_FPGA_EARLY_PORTING
 	cd-gpios = <&pio 4 0>;
 #endif
