--- a/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2019 MediaTek Inc.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -487,7 +488,7 @@
 		};
 		mt_pmic_vio28_ldo_reg: ldo_vio28 {
 			regulator-name = "vio28";
-			regulator-min-microvolt = <2800000>;
+			regulator-min-microvolt = <3000000>;
 			regulator-max-microvolt = <3300000>;
 			regulator-enable-ramp-delay = <1920>;
 		};
