--- a/arch/arm64/boot/dts/mediatek/mt6360.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6360.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2017 MediaTek Inc.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -51,10 +52,13 @@
 			aicr = <500000>;		/* uA */
 			mivr = <4400000>;		/* uV */
 			cv = <4350000>;			/* uA */
-			ieoc = <150000>;		/* uA */
+			/* BSP.Charge - 2020.12.02 - modify ieoc */
+			ieoc = <200000>;		/* uA */
+			/* BSP.Charge - 2021.01.21 - add recharge volt */
+			vrechg = <200000>;		/*uV*/
 			safety_timer = <12>;		/* hour */
 			ircmp_resistor = <25000>;	/* uohm */
-			ircmp_vclamp = <32000>;		/* uV */
+			ircmp_vclamp = <64000>;		/* uV */
 			en_te = <1>;
 			en_wdt = <1>;
 			aicc_once = <1>;
