--- a/drivers/input/touchscreen/mediatek/Makefile
+++ b/drivers/input/touchscreen/mediatek/Makefile
@@ -22,3 +22,7 @@ obj-$(CONFIG_TOUCHSCREEN_MTK_GT5688)	+=  GT5688/
 obj-$(CONFIG_TOUCHSCREEN_HIMAX_I2C)	+=  hxchipset/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FOCALTECH_FHD)	+=  focaltech_fhd_touch/
 obj-$(CONFIG_TOUCHSCREEN_MTK_GT9157)    +=  GT9157/
+# BSP.TP - 2020.10.29 - Add for TP bring up
+obj-$(CONFIG_TOUCHSCREEN_NT36672C)      += NT36672C/
+#BSP.TP - 2020.12.28 - Add for palm senser
+obj-$(CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE)  += xiaomi/
